--- a/css/styles.css
+++ b/css/styles.css
@@ -1,77 +1,132 @@
-/* My Styles */
+:root {
+  --primary: #0f0027;
+  --secondary: #06065c;
+  --dark: #020229;
+  --light: white;
+  background-image: url('/workspaces/beta-version/img/sky1.jpg')
+}
 
-
-/* Vertical and Horizontal aligment of container */
+* {
+  margin: 0;
+  padding: 0;
+}
+   
+@import url('telma.css');
+@font-face {
+  font-family: 'Telma-Black.eot';
+  src: url('telma.css');
+}
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  min-height: 100vh;
 }
 
- /* scene */
-.scene {
-    width: 300px;
-    height: 400px;
-    /* space between card-scenes */
-    margin: 16px;
-
-    /* set perspective   */
-    perspective: 600px;
-}
-
-/* card */
 .card {
-    width: 100%;
-    height: 100%;
-    position: relative;
-
-    cursor: pointer;
-    transition: transform 1s;
-
-    /* preserve child 3d   */
-    transform-style: preserve-3d;
+  margin: 100px auto 0;
+  width: 500px;
+  height: 550px;
+  perspective: 1000px;
 }
 
-/* face */
-.face {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-
-    /* hide back face   */
-    backface-visibility: hidden;
+.card__inner {
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  position: relative;
 }
 
-.front {
-    background: coral;
+.card__inner.is-flipped {
+  transform: rotateY(180deg);
 }
 
-.back {
-    background: cornflowerblue;
-    /* flip it default   */
-    transform: rotateY(180deg);
+
+.card__face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  overflow: hidden;
+  border-radius: 16px;
+  box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
 }
 
-/* flip card
-  * toggle with JS
-  */
-.flipped {
-    transform: rotateY(180deg);
+.card__face--front {
+  background-image: linear-gradient(to bottom right, var(--primary), var(--secondary));
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-/* Media Query for Mobile */
-@media only screen and (max-width: 30em){ 
-    
-    /* Diagnostic Styling. Delete When Done. */
-    body:before {
-         background: yellow;
-         content: "Mobile Size";
-    }
+.card__face--front h2 {
+  color: #FFF;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 50px;
+}
 
-    body {
-        display: flex;
-        flex-direction: column;
-    }
-    
+.card__face--back {
+  background-color: var(--light);
+  transform: rotateY(180deg);
+}
+
+.card__content {
+  width: 100%;
+  height: 100%;
+}
+
+.card__header {
+  position: relative;
+  padding: 30px 30px 40px;
+}
+
+.card__header:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: linear-gradient(to bottom left, var(--primary) 10%, var(--secondary) 115%);
+  z-index: -1;
+  border-radius: 10px 0px 10% 10%;
+}
+
+.img {
+  display: block;
+  width: 300px;
+  height: 200px;
+  margin: 0 auto 0;
+  border-radius: 10%;
+  background-color: #FFF;
+  border: 5px solid #FFF;
+  object-fit: cover;
+}
+
+.card__header h2 {
+  color: #FFF;
+  font-size: 32px;
+  font-weight: 900;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.card__body {
+  padding: 30px;
+}
+
+.card__body h3 {
+  color: var(--dark);
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.card__body p {
+  color: var(--dark);
+  font-size: 18px;
+  line-height: 1.4;
 }
